na wielowym tab

--- a/style.css
+++ b/style.css
@@ -25,7 +25,7 @@ button:hover {
     justify-content: center;
 
 }
-.kula {
+.2kula {
     float: left;
     width: 80px;
     height: 80px;
@@ -37,5 +37,14 @@ button:hover {
     color: white;
     margin: 10px;
     line-height: 80px;
+
+}
+.kula {
+    float: left;
+    font-size: 20px;
+    font-weight: bold;
+    text-align: left;
+    color: black;
+    margin: 10px;
 
 }
