--- a/style.css
+++ b/style.css
@@ -19,32 +19,11 @@ button:hover {
     background-color: cornflowerblue;
     cursor: pointer;
 }
-#blok {
-    display: flex;
-    align-items: center;
-    justify-content: center;
-
-}
-.2kula {
-    float: left;
-    width: 80px;
-    height: 80px;
-    border-radius: 50%;
-    background-color: crimson;
-    font-size: 53px;
-    font-weight: bold;
-    text-align: center;
-    color: white;
-    margin: 10px;
-    line-height: 80px;
-
-}
-.kula {
-    float: left;
+div {
     font-size: 20px;
     font-weight: bold;
-    text-align: left;
+    text-align: center;
     color: black;
-    margin: 10px;
+
 
 }
