--- a/style.css
+++ b/style.css
@@ -6,13 +6,13 @@
 button {
     margin:  20px auto;
     padding: 50 px;
-    background-color: salmon;
+    background-color: crimson;
     color: white;
     border: none;
     display: block;
     width: 600px;
     border-radius: 10px;
-    font-size: 60px;
+    font-size: 30px;
     font-weight: bold;
 }
 button:hover {
