responsywność /boot/ + fav

--- a/style.css
+++ b/style.css
@@ -3,7 +3,7 @@
     padding: 0;
     font-family: Lato, monospace, roboto, arial;
 }
-button {
+/*button {
     margin:  20px auto;
     padding: 50 px;
     background-color: #1a237e;
@@ -18,12 +18,20 @@ button {
 button:hover {
     background-color: #000051;
     cursor: pointer;
-}
+}*/
 div {
     font-size: 20px;
     font-weight: bold;
     text-align: center;
     color: black;
-
-
+}
+.btn.btn-primary.btn-lg.btn-block {
+    margin:  20px auto;
+    padding: 50 px;
+    background-color: #1a237e;
+    color: #ffb300;
+    border-radius: 10px;
+    font-size: 30px;
+    font-weight: bold;
+    font-family: Lato, monospace, roboto, arial;
 }
