--- a/style.css
+++ b/style.css
@@ -36,6 +36,10 @@ div {
     font-family: Lato, monospace, roboto, arial;
     width: 40%;
 }
+.btn.btn-primary.btn-lg.btn-block:hover {
+    background-color: #000051;
+    cursor: pointer;
+}
 @media only screen and (max-width: 1181px) {
     .btn.btn-primary.btn-lg.btn-block {
         width: auto;
