--- a/style.css
+++ b/style.css
@@ -3,27 +3,15 @@
     padding: 0;
     font-family: Lato, monospace, roboto, arial;
 }
-/*button {
-    margin:  20px auto;
-    padding: 50 px;
-    background-color: #1a237e;
-    color: #ffb300;
-    border: none;
-    display: block;
-    width: 600px;
-    border-radius: 10px;
-    font-size: 30px;
-    font-weight: bold;
-}
-button:hover {
-    background-color: #000051;
-    cursor: pointer;
-}*/
 div {
     font-size: 20px;
     font-weight: bold;
     text-align: center;
     color: black;
+}
+.comb {
+    font-size: 15px;
+    font-style: italic;
 }
 .btn.btn-primary.btn-lg.btn-block {
     margin:  20px auto;
